--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "node backend/app.js",
     "dev": "NODE_ENV=DEVELOPMENT nodemon backend/app.js",
     "prod": "NODE_ENV=PRODUCTION nodemon backend/app.js",
-    "seeder": "node backend/seeder/seeder.js"
+    "seeder": "node backend/seeder/seeder.js",
+    "lint": "eslint --fix --ext .js,.jsx .",
+    "prepush": "npm run lint"
   },
   "author": "Atul Tathagat",
   "license": "ISC",
