--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,3 +1,13 @@
 PORT=4000
 NODE_ENV=DEVELOPMENT
 DB_LOCAL_URI=mongodb://localhost:27017/shopit-v2
+JWT_SECRET=SJF34390JFKDJFSDKLFJ4F0DSJFKSDJF3049RDFJSDKLFJSKJDFO34
+JWT_EXPIRES_TIME=7d
+COOKIE_EXPIRES_TIME=7
+SMTP_HOST=172.26.202.27
+SMTP_PORT=25
+SMTP_EMAIL=75199a0c6fe70a
+SMTP_PASSWORD=
+SMTP_FROM_EMAIL=noreply@shopit.com
+SMTP_FROM_NAME=ShopIT
+FRONTEND_URL=http://localhost:4000/
