--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
   "author": "Atul Tathagat",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^8.0.4"
+    "mongoose": "^8.0.4",
+    "nodemailer": "^6.9.8"
   },
   "devDependencies": {
-     "eslint": "^8.56.0",
+    "bcrypt": "^5.1.1",
+    "eslint": "^8.56.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-node": "^4.1.0",
     "eslint-plugin-import": "^2.29.1",
@@ -27,6 +30,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.0.2"
   }
 }
