--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^8.0.4",
-    "nodemailer": "^6.9.8"
+    "nodemailer": "^6.9.8",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "bcrypt": "^5.1.1",
@@ -28,7 +29,7 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.0.2"
