--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^8.0.4",
     "nodemailer": "^6.9.8",
     "react-helmet": "^6.1.0",
+    "react-js-pagination": "^3.0.3",
     "react-redux": "^9.1.0"
   },
   "devDependencies": {
