--- a/backend/package.json
+++ b/backend/package.json
@@ -6,24 +6,20 @@
   "main": "index.js",
   "scripts": {
     "start": "node backend/app.js",
-    "dev": "NODE_ENV=DEVELOPMENT nodemon backend/app.js",
-    "prod": "NODE_ENV=PRODUCTION nodemon backend/app.js",
+    "dev": "NODE_ENV=DEVELOPMENT nodemon app.js",
+    "prod": "NODE_ENV=PRODUCTION nodemon app.js",
     "seeder": "node backend/seeder/seeder.js",
     "lint": "eslint --fix --ext .js,.jsx ."
   },
   "author": "Atul Tathagat",
   "license": "ISC",
   "dependencies": {
-    "@reduxjs/toolkit": "^2.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^8.0.4",
-    "nodemailer": "^6.9.8",
-    "react-helmet": "^6.1.0",
-    "react-js-pagination": "^3.0.3",
-    "react-redux": "^9.1.0"
+    "nodemailer": "^6.9.8"
   },
   "devDependencies": {
     "bcrypt": "^5.1.1",
