--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -11,3 +11,6 @@ SMTP_PASSWORD=
 SMTP_FROM_EMAIL=noreply@shopit.com
 SMTP_FROM_NAME=ShopIT
 FRONTEND_URL=http://localhost:4000/
+CLOUDINARY_CLOUD_NAME=dz3vkepxz
+CLOUDINARY_API_KEY=275537782893925
+CLOUDINARY_API_SECRET=dkhol0uq27_0iudYV_Zg_s2HNME
