--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^8.0.4",
-    "nodemailer": "^6.9.8"
+    "nodemailer": "^6.9.8",
+    "stripe": "^14.22.0"
   },
   "devDependencies": {
     "bcrypt": "^5.1.1",
