--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,12 +7,15 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "chart.js": "^4.4.2",
     "countries-list": "^3.1.0",
     "html-to-image": "^1.11.11",
     "html2canvas": "1.4.1",
     "jspdf": "2.5.1",
     "mdbreact": "^5.2.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "4.3.1",
+    "react-datepicker": "^6.7.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.4.1",
